syntax = "proto3";

message ToHub {
    uint32 ToHub = 1;
    oneof Message {
        GetContactSensorState GetContactSensorState = 5;
        GetSwitchState GetSwitchState = 6;
        SwitchState SetSwitchState = 7;
    }
}

message GetContactSensorState {
    uint32 DeviceID = 1;
}

message ToAccessory {
    uint32 FromHub = 1;
    oneof Message {
        ContactSensorState ContactSensorState = 5;
        SwitchState SwitchState = 6;
    }
}

message ContactSensorState {
    uint32 DeviceID = 1;
    bool Open = 2;
}

message HubConfig {
    uint32 HubID = 1;
    repeated DeviceConfig Devices = 2;
}

message DeviceConfig {
    uint32 DeviceID = 1;
    oneof Config {
        ContactSensorConfig ContactSensor = 2;
        SwitchConfig Switch = 3;
    }
}

message ContactSensorConfig {
    uint32 InPin = 1;
}

message SwitchConfig {
    repeated SwitchInput Inputs = 1;
    uint32 OutputPin = 2;
}

message SwitchInput {
    uint32 Pin = 1;
    SwitchInputType InputType = 2;
}

message SwitchState {
    uint32 DeviceID = 1;
    bool State = 2;
}

message GetSwitchState {
    uint32 DeviceID = 1;
}

// -----------------------

message GetTemperatureValue {
}

message TemperatureValue {
    float TemperatureValue = 1;
    float HumidityValue = 2;
}

//message SwitchConfig {
//    bool WithHardwareControl = 1;
//    bool WithSoftwareControl = 2;
//    bool WithOutput = 3;
//    bool WithInvertedOutput = 4;
//    uint32 InputPin = 5;
//    uint32 OutputPin = 6;
//    uint32 InvertedOutputPin = 7;
//    SwitchInputType InputType = 8;
//}

message TemperatureSensorConfig {
    TemperatureSensorType SensorType = 1;
    uint32 InPin = 2;
    uint32 SendInterval = 3;
    uint32 ReadInterval = 4;
}

enum TemperatureSensorType {
    TemperatureSensorTypeDHT11 = 0;
    TemperatureSensorTypeDHT22 = 1;
}

enum SwitchInputType {
    SwitchInputTypeOnOff = 0;
    SwitchInputTypePulse = 1;
    SwitchInputTypeChange = 2;
}